[package]
name = "solana_amm"
version = "0.0.1"
description = "Automated Market Maker"
authors = ["Mikhail Potapov <evikser@gmail.com>"]
repository = "https://github.com/evikser/solana_amm"
license = "MIT"
edition = "2018"
publish = false

[features]

[dependencies]
solana-program = "1.7.9"
spl-token = {version = "3.2.0", features = ["no-entrypoint"]}
thiserror = "1.0"
arrayref = "0.3.6"
rust_decimal = "1.16"

[dev-dependencies]
solana-sdk = "1.7.9"
solana-program-test = "1.7.9"

[lib]
crate-type = ["cdylib", "lib"]
